chore: Fix problem with overflow of delete button on different screen size

--- a/frontend/src/components/trashbox-icon/trashbox-icon.scss
+++ b/frontend/src/components/trashbox-icon/trashbox-icon.scss
@@ -7,7 +7,7 @@ $transition: all 0.2s ease-in-out;
   width: 23px;
   height: 23px;
   position: absolute;
-  right: -2px;
+  right: 60px;
   top: -2px;
   cursor: pointer;
 
@@ -100,5 +100,17 @@ $transition: all 0.2s ease-in-out;
       background: darken($trashColor3, 10%);
       border-radius: 2px;
     }
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1400px) {
+  .trash-box {
+    right: 30px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .trash-box {
+    right: -3px;
   }
 }
